Minor debugging in mergesort and quicksort AVs and mergesort exercise, grading for quicksort exercise is significantly BROKEN, committing so others can look over it

--- a/AV/Development/mergesort-av.html
+++ b/AV/Development/mergesort-av.html
@@ -200,7 +200,7 @@
       av = new JSAV("avcontainer"); // initialize JSAV ..
       // .. and the array.
       arr = av.ds.array(theArray, {indexed: true});
-      
+      av.displayInit();
       // BEGIN MERGESORT IMPLEMENTATION
 
 	  var level = 1;
