--- a/AV/Development/quicksort-av.html
+++ b/AV/Development/quicksort-av.html
@@ -3,7 +3,7 @@
 <head>
   <title>Quicksort AV</title>
   <link href="opendsaAV.css" title="CSS" rel="stylesheet" type="text/css" />
-  <link rel="stylesheet" href="../JSAV/css/JSAV.css" type="text/css" />
+  <link rel="stylesheet" href="../../JSAV/css/JSAV.css" type="text/css" />
   <style>
 
   #container {
@@ -136,8 +136,8 @@
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
 <script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.8.16/jquery-ui.min.js"></script>
-<script src="../JSAV/lib/jquery.transform.light.js"></script>
-<script src="../JSAV/build/JSAV-min.js"></script>
+<script src="../../JSAV/lib/jquery.transform.light.js"></script>
+<script src="../../JSAV/build/JSAV-min.js"></script>
 
 <script>
 (function($) {
@@ -245,7 +245,7 @@
 	  
 	  // Initialize the original array
       arr = av.ds.array(theArray, {indexed: true});
-      
+      av.displayInit();
       // BEGIN QUICKSORT IMPLEMENTATION
 	  
       // Save the left edge of the original array so sublists can be positioned relative to it
@@ -254,7 +254,6 @@
 	  var level = 2;
 	  var leftOffset = 0;
 	  
-      av.displayInit();
       quicksort(arr, level, leftOffset);
 
       // END QUICKSORT IMPLEMENTATION
