Initial commit issues #59, #60, #65 and #82. Added supoort for login and logout with (modified) A+ back-end. Not working on chrome (corss domain error I guess). Works fine on Firefox.

--- a/RST/source/_themes/haiku/layout.html
+++ b/RST/source/_themes/haiku/layout.html
@@ -15,6 +15,29 @@
 {% block relbar1 %}{% endblock %}
 {% block relbar2 %}{% endblock %}
 
+{% macro login() %}  
+<a id="logon" style="float:right;color:red;margin:10px 10px auto"  name="#login-box" class="login-window" href="#">Login</a>    
+<div id="login-box" class="login-popup">
+        <a href="#" class="close"><img src="_static/close_pop.png" class="btn_close" title="Close Window" alt="Close" /></a>
+          <form method="post" class="signin" name="signin" action="#">
+                <fieldset class="textbox">
+            	<label class="username">
+                <span>Username or email</span>
+                <input id="username" name="username" value="" type="text" autocomplete="on" placeholder="Username">
+                </label>
+                <label class="password">
+                <span>Password</span>
+                <input id="password" name="password" value="" type="password" placeholder="Password">
+                </label>
+                <button class="submit-button" type="button">Sign in</button>
+                <p>
+                <a class="forgot" href="#">Forgot your password?</a>
+                </p>        
+                </fieldset>
+          </form>
+</div>
+{% endmacro %}
+
 {% macro nav() %}
         {%- block haikurel1 %}
         {%- endblock %}
@@ -35,6 +58,7 @@
 {% block content %}
       <div class="header">
         {%- block haikuheader %}
+        {{ login() }}  
         {%- if theme_full_logo != "false" %}
         <a href="{{ pathto('index') }}">
           <img class="logo" src="{{ pathto('_static/' + logo, 1) }}" alt="Logo"/>
