--- a/Exercises/Development/Hash_displayTable.html
+++ b/Exercises/Development/Hash_displayTable.html
@@ -8,12 +8,12 @@
 <script type="text/javascript"
    src="http://cdn.mathjax.org/mathjax/1.1-latest/MathJax.js?config=http://algoviz.org/OpenDSA/dev/OpenDSA/ODSAkhan-exercises/KAthJax-77111459c7d82564a705f9c5480e2c88.js">
 </script>
-<script>urlBaseOverride = "../ODSAkhan-exercises/";</script>
-<script src="../ODSAkhan-exercises/khan-exercise.js"></script>
-<script src="../JSAV/build/JSAV-min.js"></script>
+<script>urlBaseOverride = "../../ODSAkhan-exercises/";</script>
+<script src="../../ODSAkhan-exercises/khan-exercise.js"></script>
+<script src="../../JSAV/build/JSAV-min.js"></script>
 <!-- I added this to the header -->
-<script src="../JSAV/lib/jquery.transform.light.js"></script>
-<link rel="stylesheet" href="../JSAV/css/JSAV.css" type="text/css" />
+<script src="../../JSAV/lib/jquery.transform.light.js"></script>
+<link rel="stylesheet" href="../../JSAV/css/JSAV.css" type="text/css" />
 <body>
   <script type="text/javascript">
   var jsav,
