--- a/Exercises/Development/ODSAindex.html
+++ b/Exercises/Development/ODSAindex.html
@@ -6,8 +6,8 @@
    src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js">
 </script>
 <script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.8.16/jquery-ui.min.js"></script>
-  <script>urlBaseOverride = "../ODSAkhan-exercises/";</script>
-   <script src="../ODSAkhan-exercises/khan-exercise.js"></script>
+  <script>urlBaseOverride = "../../ODSAkhan-exercises/";</script>
+   <script src="../../ODSAkhan-exercises/khan-exercise.js"></script>
 </head>
 <body>
 
