--- a/Exercises/Development/knapsackSolution.html
+++ b/Exercises/Development/knapsackSolution.html
@@ -8,10 +8,10 @@
 <script type="text/javascript"
    src="http://cdn.mathjax.org/mathjax/1.1-latest/MathJax.js?config=http://algoviz.org/OpenDSA/dev/OpenDSA/ODSAkhan-exercises/KAthJax-77111459c7d82564a705f9c5480e2c88.js">
 </script>
-  <script>urlBaseOverride = "../ODSAkhan-exercises/";</script>
-  <script src="../ODSAkhan-exercises/khan-exercise.js"></script>
-  <script src="../JSAV/build/JSAV-min.js"></script>
-  <link rel="stylesheet" href="../JSAV/css/JSAV.css" type="text/css" />
+  <script>urlBaseOverride = "../../ODSAkhan-exercises/";</script>
+  <script src="../../ODSAkhan-exercises/khan-exercise.js"></script>
+  <script src="../../JSAV/build/JSAV-min.js"></script>
+  <link rel="stylesheet" href="../../JSAV/css/JSAV.css" type="text/css" />
 
 <style>
 .jsavcontainer {
