Fixed include file names for quadratic sorts (fallout from the name changes). Added cleanbuild target to RST/Makefile.

--- a/AV/Sorting/bubblesortAV.html
+++ b/AV/Sorting/bubblesortAV.html
@@ -2,7 +2,6 @@
 <html>
 <head>
   <title>Bubble Sort Visualization</title>
-  <link rel="stylesheet" href="../opendsaAV.css" type="text/css" />
   <link rel="stylesheet" href="../../JSAV/css/JSAV.css" type="text/css" />
   <link rel="stylesheet" href="quadraticsortAV.css" type="text/css" />
 </head>
@@ -54,6 +53,6 @@
 <script src="../../JSAV/lib/jquery.transform.light.js"></script>
 <script src="../../JSAV/lib/raphael.js"></script>
 <script src="../../JSAV/build/JSAV-min.js"></script>
-<script src="bubblesort-av.js"></script>
+<script src="bubblesortAV.js"></script>
 </body>
 </html>
