--- a/AV/Sorting/selectionsortAV.html
+++ b/AV/Sorting/selectionsortAV.html
@@ -2,7 +2,6 @@
 <html>
 <head>
   <title>Selection Sort Visualization</title>
-  <link href="../opendsaAV.css" title="CSS" rel="stylesheet" type="text/css" />
   <link rel="stylesheet" href="../../JSAV/css/JSAV.css" type="text/css" />
   <link rel="stylesheet" href="quadraticsortAV.css" type="text/css" />
   <style>
@@ -59,6 +58,6 @@
 <script src="../../JSAV/lib/jquery.transform.light.js"></script>
 <script src="../../JSAV/lib/raphael.js"></script>
 <script src="../../JSAV/build/JSAV-min.js"></script>
-<script src="selectionsort-av.js"></script>
+<script src="selectionsortAV.js"></script>
 </body>
 </html>
