--- a/AV/Development/sackProficiency.html
+++ b/AV/Development/sackProficiency.html
@@ -3,11 +3,13 @@
   <head>
     <meta http-equiv="Content-Type" content="text/html; charset=ISO-8859-1">
     <title>Fib Proficiency</title>
-    <link rel="stylesheet" href="../JSAV/css/JSAV.css" type="text/css" media="screen" title="NOT kd-tree" charset="utf-8" />
+    <link rel="stylesheet" href="../../JSAV/css/JSAV.css" type="text/css" media="screen" title="NOT kd-tree" charset="utf-8" />
      <link href="opendsaAV.css" title="CSS" rel="stylesheet" type="text/css" />
   
     <style>
-    #av { width: 98%;}
+    .jsavcontainer {
+        border: 0px;
+        height: 600px}
     .jsavarray { margin: 0; height: 40px; min-height: 40px; }
     .jsavarray li { border-radius: 0 !important; height: 40px; width: 40px; font-size: 14px; line-height: 40px;}
     </style>
@@ -26,10 +28,9 @@
        src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js">
     </script>
     <script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.8.16/jquery-ui.min.js"></script>
-    <script src="../JSAV/lib/jquery.transform.light.js"></script>
-    <script src="../JSAV/lib/raphael.js"></script>
-    <script src="../JSAV/build/JSAV.js"></script>
-    <script src="sackTraceBack.js"></script>
+    <script src="../../JSAV/lib/jquery.transform.light.js"></script>
+    <script src="../../JSAV/lib/raphael.js"></script>
+    <script src="../../JSAV/build/JSAV.js"></script>
     <script src="sackProficiency.js"></script>
 
   </body>
