--- a/AV/Development/sackTraceBack.html
+++ b/AV/Development/sackTraceBack.html
@@ -18,6 +18,9 @@
     </div>
     
     <style>
+        .jsavcontainer {
+          border: 0px;
+          height: 600px}
          /** change size and margins of arrays */
         .jsavarray { margin: 0; height: 40px; min-height: 40px; }
         .jsavarray li { border-radius: 0 !important; height: 40px; width: 40px; font-size: 14px; line-height: 40px;}
