--- a/Exercises/Development/knapsackSelect.html
+++ b/Exercises/Development/knapsackSelect.html
@@ -60,7 +60,7 @@
         table[1] = jsav.ds.array(row, {top:"70px"});
         table[1].css(table[1].size()-1, {"background-color":"#00FF00"});
         jsav.label("Item", {top:(parseInt(table[0].css("top"))+10), left:(parseInt(table[0].css("left")) - 30)})
-        jsav.label("Weight", {top:(parseInt(table[0].css("top"))-25), left:(parseInt(table[0].css("left")))})
+        jsav.label("Capacity", {top:(parseInt(table[0].css("top"))-25), left:(parseInt(table[0].css("left")))})
         jsav.forward();
     }
 
