--- a/AV/Development/sackTreePluck.html
+++ b/AV/Development/sackTreePluck.html
@@ -1,8 +1,9 @@
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN">
 <html>
   <head>
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <title>Knapsack Tree Reduction</title>
-    <link rel="stylesheet" href="../JSAV/css/JSAV.css" type="text/css" media="screen" title="kd-tree" charset="utf-8" />
+    <link rel="stylesheet" href="../../JSAV/css/JSAV.css" type="text/css" media="screen" title="kd-tree" charset="utf-8" />
      <link href="opendsaAV.css" title="CSS" rel="stylesheet" type="text/css" />
 
 
@@ -26,10 +27,9 @@
        src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js">
     </script>
     <script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.8.16/jquery-ui.min.js"></script>
-    <script src="../JSAV/lib/jquery.transform.light.js"></script>
-    <script src="../JSAV/lib/raphael.js"></script>
-    <script src="../JSAV/build/JSAV.js"></script>
-    <script src="sackCallTree.js"></script>
+    <script src="../../JSAV/lib/jquery.transform.light.js"></script>
+    <script src="../../JSAV/lib/raphael.js"></script>
+    <script src="../../JSAV/build/JSAV.js"></script>
     <script src="generalDynamicForm.js"></script>
     <script src="sackTreePluck.js"></script>
 
