--- a/Exercises/Development/knapsackFillRow.html
+++ b/Exercises/Development/knapsackFillRow.html
@@ -122,7 +122,10 @@
                         row[j] = "";
                 }
             }
-            jsavDynTable[i] = jsav.ds.array(row);
+            jsavDynTable[i] = jsav.ds.array(row, 
+                                        {centered:false, 
+                                         top: ((i*40) + 30) + "px",
+                                         right: "0px"});
             jsavDynTable[i].click(clickHandler);
         }
         
@@ -134,24 +137,20 @@
             arr[i] = jsavDynTable[jsavDynTable.length-1].value(i);
             jsavDynTable[jsavDynTable.length-1].value(i, "-");
         }
-        //only way I found to move the thing down... sucky...
-        for(var i = 0; i < jsavDynTable.length; i++)
-        {
-            jsavDynTable[i].css({center:false});
-            jsavDynTable[i].css({left: "400px"});
-            jsavDynTable[i].css({top:(parseInt(jsavDynTable[i].css("top")) + 30)});
-        }
-        //create nice item labels for the dynamic array
-        jsav.label("Item", {top:(parseInt(jsavDynTable[0].css("top")) + 10), left:(parseInt(jsavDynTable[0].css("left")) - 60)});
+
+        jsav.label("Item", {top:(parseInt(jsavDynTable[0].css("top")) + 10),
+                            right:(parseInt(jsavDynTable[0].css("right")) + (40 * capacity + 90))});
         for(var i = 0; i <= numItems; i++)
         {
-            jsav.label(i, {top:(parseInt(jsavDynTable[0].css("top")) + 42 * i + 10), left:(parseInt(jsavDynTable[0].css("left")) - 20)});
+            jsav.label(i, {top:(parseInt(jsavDynTable[0].css("top")) + 42 * i + 10),
+                           right:(parseInt(jsavDynTable[0].css("right")) + (40 * capacity + 60))});
         }
-        jsav.label("Weight", {top:-12, left:(parseInt(jsavDynTable[0].css("left")))});
+        jsav.label("Capacity", {top:-12, right:(parseInt(jsavDynTable[0].css("right")) + (capacity*40))});
         for(var i = 0; i <= capacity; i++)
         {
-            jsav.label(i, {top:5, left:(parseInt(jsavDynTable[0].css("left")) + 17 + 41*i)});
-        } 
+            jsav.label(capacity - i, {top:5, 
+                           right:(parseInt(jsavDynTable[0].css("right")) + 17 + 41*i)});
+        }
         jsav.forward();
     }
 
@@ -171,51 +170,8 @@
                 retStr = retStr + arr[i] + skip;
             }
         }
-        console.log("answer experession: \"" + retStr + "\"");
+        //console.log("answer experession: \"" + retStr + "\"");
         return retStr;       
-
-        /*
-        //compute the answer from the bottom right
-        var item = jsavDynTable.length - 1;
-        var weight = jsavDynTable[0].size() - 1;
-        //console.log("\ngenerating answer");
-        var answer = [];
-        var answerPtr = 0;
-        while(item > 0)
-        {
-            //console.log("item: " + item +"  weight: " + weight);
-            var takeVal;
-            var leaveVal;
-            leaveVal = jsavDynTable[item-1].value(weight);
-            takeVal = jsavDynTable[item-1].value(weight - jsavItems[1].value(item-1)) +
-                jsavItems[2].value(item-1);
-            //console.log("takeVal: " + takeVal + "  leaveVal: " + leaveVal);
-            if((weight - jsavItems[1].value(item-1)) < 0)
-            {
-                //console.log("item: " + item + " left");
-                answer[item-1] = 0; 
-            }
-            else if(leaveVal >= takeVal) //left
-            {
-                //console.log("item: " + item + " left");
-                answer[item-1] = 0;
-            }
-            else //taken
-            {
-                weight = weight - jsavItems[1].value(item-1);
-                answer[item-1] = 1;
-                //console.log("item: " + item + " taken");
-            }
-            item--;
-        }
-        var arrayString = "";
-        for(var i = 0; i < answer.length; i++)
-        {
-            arrayString = arrayString + answer[i] + ", ";
-        }
-        //console.log("answer: " + arrayString);
-        return answer;
-        */
 }
 
 var hintHighlight = function()
