--- a/AV/Development/edit-distance.html
+++ b/AV/Development/edit-distance.html
@@ -6,7 +6,7 @@
 <html>
 <head>
     <title>Edit Distance Demo</title>
-    <link rel="stylesheet" href="../JSAV/css/JSAV.css" type="text/css" media="screen" title="no title" charset="utf-8" />
+    <link rel="stylesheet" href="../../JSAV/css/JSAV.css" type="text/css" media="screen" title="no title" charset="utf-8" />
   </head>
   
 	<body>
@@ -16,8 +16,6 @@
 			Enter two words to compare: <BR>
 			<INPUT TYPE="text" NAME="txtWord1" VALUE="">	
 			<INPUT TYPE="text" NAME="txtWord2" VALUE=""><P>
-			<!--<input type="text" name="rowz" value="">-->
-			<!--<input type="text" name="colz" value=""><p>-->
 			<input type="checkbox" name="grid" /> Grid Form	
 			<input type="checkbox" name="tree" /> Tree Form<p>
 			<INPUT TYPE="button" NAME="btnComp" Value="Compare" onClick="compute(this.form)">
@@ -37,9 +35,9 @@
   </style>
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
 	<script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.8.16/jquery-ui.min.js"></script>
-	<script src="../JSAV/lib/jquery.transform.light.js"></script>
-	<script src="../JSAV/lib/raphael.js"></script>
-	<script src="../JSAV/build/JSAV.js"></script>
+	<script src="../../JSAV/lib/jquery.transform.light.js"></script>
+	<script src="../../JSAV/lib/raphael.js"></script>
+	<script src="../../JSAV/build/JSAV.js"></script>
 	<script src="edit.js"></script>
 	<script src="generalDynamicForm.js"></script>
 	<script language="JavaScript">
@@ -50,7 +48,7 @@
 	Nothing major, just description of functionality.
 	*/
 	function about() {
-		alert("This HTML displays all animations for Edit Distance AV.\nOperation:\nCheck the grid form checkbox to display the animation of the grid.\nCheck the tree form for creation of the recursive call tree.\nCheck both to show generalized function pruning the recursive call tree, and filling the grid.\nReload page to reset.","Edit Distance Demo Page");
+		alert("This HTML displays all animations for Edit Distance AV.\nOperation:\nCheck the grid form checkbox to display the animation of the grid.\nCheck the tree form for creation of the recursive call tree.\nCheck both to show generalized function pruning the recursive call tree, and filling the grid.\nReload page to reset.");
 	} //end about func
 
 
@@ -86,7 +84,7 @@
 				var tr = av.ds.tree();
 				tr.root([s1.length, s2.length]);
 				av.displayInit();				
-				recDistAnim(tr, tr.root(), s1, s2);
+				recDistAnim(av, tr, tr.root(), s1, s2);
 				av.recorded();
 			}
 		} 
@@ -99,12 +97,16 @@
 			however, the remaining rows are misaligned.  It seems that as soon as one of these 				arrays is modified, it loses its alignment.
 		*/
 		if (grid == 1 && tree == 0){
-			var done = eDistAnim(s1, s2);
+			//var done = eDistAnim(s1, s2);
 			//I would have assumed that post-modifying the values of the cells, changing the css would have forced it to have an effect.
-			for(var i = 0; i < s2.length+2; i++)
+			/*for(var i = 0; i < s2.length+2; i++)
 			{
 				done[i].css({centered: true});
-			} //this makes no difference.
+			} *///this makes no difference.
+
+			eDistOptimal(av, s1, s2);
+
+
 		}
 		// tree & grid representation: plucking tree to fill grid
 		if (tree == 1 && grid == 1) {
@@ -112,11 +114,11 @@
 			//create the tree (non-animated)
 			var tr = av.ds.tree({centered: true}); //false, top:"-75px", left:"20px"});
 			tr.root([s1.length, s2.length]);			
-			recDist(tr, tr.root(), s1, s2);
+			recDist(av, tr, tr.root(), s1, s2);
 			tr.layout();
 		
 			//create the empty table (non-animated)
-			var table = emptyEDist(s1, s2);
+			var table = emptyEDist(av, s1, s2);
 			var topCount = 50;
 			for (var i = 0; i < table.length; i++)
 			{
