--- a/AV/Sorting/selectionsortAV.html
+++ b/AV/Sorting/selectionsortAV.html
@@ -1,7 +1,8 @@
-<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN">
+<!DOCTYPE html>
 <html>
 <head>
   <title>Selection Sort Visualization</title>
+  <meta charset="utf-8" />
   <link rel="stylesheet" href="../../JSAV/css/JSAV.css" type="text/css" />
   <link rel="stylesheet" href="quadraticsortAV.css" type="text/css" />
   <style>
