Fixs image link

--- a/RST/source/_themes/haiku/layout.html
+++ b/RST/source/_themes/haiku/layout.html
@@ -18,7 +18,7 @@
 {% macro login() %}  
 <a id="logon" style="float:right;color:red;margin:10px 10px auto"  name="#login-box" class="login-window" href="#">Login</a>    
 <div id="login-box" class="login-popup">
-        <a href="#" class="close"><img src="_static/close_pop.png" class="btn_close" title="Close Window" alt="Close" /></a>
+        <a href="#" class="close"><img src="_static/Images/close_pop.png" class="btn_close" title="Close Window" alt="Close" /></a>
           <form method="post" class="signin" name="signin" action="#">
                 <fieldset class="textbox">
             	<label class="username">
