Updated JSAV urlss in heap proficiensy exercises after directory restructuring.

--- a/AV/Development/binaryheap-delete-proficiency.html
+++ b/AV/Development/binaryheap-delete-proficiency.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <title>Binary Heap Delete</title>
-    <link rel="stylesheet" href="../JSAV/css/JSAV.css" type="text/css" media="screen" title="no title" charset="utf-8" />
+    <link rel="stylesheet" href="../../JSAV/css/JSAV.css" type="text/css" media="screen" title="no title" charset="utf-8" />
     <style>
     #av { width: auto;}
     .jsavoutput.jsavline { height: 20px; margin: 0 0 0 20px;}
@@ -21,10 +21,10 @@
        src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js">
     </script>
     <script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.8.16/jquery-ui.min.js"></script>
-    <script src="../JSAV/lib/jquery.transform.light.js"></script>
-    <script src="../JSAV/lib/raphael.js"></script>
-    <script src="../JSAV/build/JSAV-min.js"></script>
-    <script src="../JSAV/extras/binaryheap.js"></script>
+    <script src="../../JSAV/lib/jquery.transform.light.js"></script>
+    <script src="../../JSAV/lib/raphael.js"></script>
+    <script src="../../JSAV/build/JSAV-min.js"></script>
+    <script src="../../JSAV/extras/binaryheap.js"></script>
 
     <script>
     var initData, bh,
