--- a/Exercises/Sorting/InssortMCQ2.html
+++ b/Exercises/Sorting/InssortMCQ2.html
@@ -3,48 +3,36 @@
 <head>
   <title>OpenDSA Insertion Sort Exercise: Multiple Choice Question 2</title>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
-<script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.8.16/jquery-ui.min.js"></script>
-<script type="text/javascript"
-   src="http://cdn.mathjax.org/mathjax/1.1-latest/MathJax.js?config=http://algoviz.org/OpenDSA/ODSAkhan-exercises/KAthJax-77111459c7d82564a705f9c5480e2c88.js">
-</script>
+  <script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.8.16/jquery-ui.min.js"></script>
+  <script type="text/javascript"
+     src="http://cdn.mathjax.org/mathjax/1.1-latest/MathJax.js?config=http://algoviz.org/OpenDSA/ODSAkhan-exercises/KAthJax-77111459c7d82564a705f9c5480e2c88.js">
+  </script>
   <script>urlBaseOverride = "../../ODSAkhan-exercises/";</script>
   <script src="../../ODSAkhan-exercises/khan-exercise.js"></script>
-  <script src="../../JSAV/build/JSAV-min.js"></script>
-  <link rel="stylesheet" href="../../JSAV/css/JSAV.css" type="text/css" />
 </head>
 <body>
 
 <div class="exercise">
-    <div class = "vars">
-      <var id="TYPES">[ "True", "False" ]</var>
-      <var id="GBAns">randFromArray( TYPES )</var>
-      <var id="GB">(GBAns === "True") ? "good" : "bad"</var>
-    </div>
   <div class="problems">
-     
-    <!-- Question MCQ -->
-   
     <div id="problem-type-or-description">
       <p class="question"> What is the worst-case time for
-	Insertionsort to sort an array of n elements? </p> 
+	Insertionsort to sort an array of <var><code>n</code></var> records? </p> 
       <div class="solution"><var><code>\Theta(n^2)</code></var></div>
       <ul class="choices">
 	<li><var><code>\Theta(n)</code></var></li>
 	<li><var><code>\Theta(\log n)</code></var></li>
 	<li><var><code>\Theta(n \log n)</code></var></li>	  	 
       </ul>
-	  <div class="hints">
-	   <p>In the worst case, each record must make its way to the
-	   top of the array. This would occur if the keys are
+      <div class="hints">
+        <p>In the worst case, each record must make its way to the
+           start of the array. This would occur if the record values are
 	   initially arranged from highest to lowest, in the reverse
 	   of sorted order.</p>
-	   <p>In this case, the number of comparisons will be one the
+        <p>In this case, the number of comparisons will be one the
 	   first time through the for loop, two the second time, and
 	   so on.</p>
-	  </div>
+      </div>
     </div> 
-
-   
   </div>
 </div>
 </body>
