--- a/Exercises/Sorting/InssortMCQ5.html
+++ b/Exercises/Sorting/InssortMCQ5.html
@@ -3,31 +3,21 @@
 <head>
   <title>OpenDSA Insertion Sort Exercise: Multiple Choice Question 5</title>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
-<script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.8.16/jquery-ui.min.js"></script>
-<script type="text/javascript"
-   src="http://cdn.mathjax.org/mathjax/1.1-latest/MathJax.js?config=http://algoviz.org/OpenDSA/ODSAkhan-exercises/KAthJax-77111459c7d82564a705f9c5480e2c88.js">
-</script>
+  <script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.8.16/jquery-ui.min.js"></script>
+  <script type="text/javascript"
+     src="http://cdn.mathjax.org/mathjax/1.1-latest/MathJax.js?config=http://algoviz.org/OpenDSA/ODSAkhan-exercises/KAthJax-77111459c7d82564a705f9c5480e2c88.js">
+  </script>
   <script>urlBaseOverride = "../../ODSAkhan-exercises/";</script>
   <script src="../../ODSAkhan-exercises/khan-exercise.js"></script>
-  <script src="../../JSAV/build/JSAV-min.js"></script>
-  <link rel="stylesheet" href="../../JSAV/css/JSAV.css" type="text/css" />
 </head>
 <body>
 
 <div class="exercise">
-    <div class = "vars">
-      <var id="TYPES">[ "True", "False" ]</var>
-      <var id="GBAns">randFromArray( TYPES )</var>
-      <var id="GB">(GBAns === "True") ? "good" : "bad"</var>
-    </div>
   <div class="problems">
-     
-    <!-- Question MCQ -->
-  
     <div id="problem-type-or-description">
       <p class="question"> When implementing Insertion Sort, a binary
 	search could be used to locate the position within the first <code>i-1</code>
-	elements of the array into which element <code>i</code> should be
+	records of the array into which record <code>i</code> should be
 	inserted. In this implementation, the worst case time will be:</p> 
       <div class="solution"><var><code>\Theta(n^2)</code></var></div>
       <ul class="choices">
@@ -37,8 +27,9 @@
       </ul>
 	   <div class="hints">
 	   <p>The position to insert could be found in
-	     <code>\Theta (\log i)</code>and shifting the elements to
-	     makeroom for the insert will require code>\Theta(i)</code></p>
+	     <code>\Theta (\log i)</code>, but shifting the records to
+	     makeroom for the insert will still require
+	     <code>\Theta(i)</code> time</p>
 	   </div>
     </div> 
 
