--- a/Exercises/Sorting/InssortMCQ7.html
+++ b/Exercises/Sorting/InssortMCQ7.html
@@ -3,26 +3,17 @@
 <head>
   <title>OpenDSA Insertion Sort Exercise: Multiple Choice Question 7</title>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
-<script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.8.16/jquery-ui.min.js"></script>
-<script type="text/javascript"
-   src="http://cdn.mathjax.org/mathjax/1.1-latest/MathJax.js?config=http://algoviz.org/OpenDSA/ODSAkhan-exercises/KAthJax-77111459c7d82564a705f9c5480e2c88.js">
-</script>
+  <script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.8.16/jquery-ui.min.js"></script>
+  <script type="text/javascript"
+     src="http://cdn.mathjax.org/mathjax/1.1-latest/MathJax.js?config=http://algoviz.org/OpenDSA/ODSAkhan-exercises/KAthJax-77111459c7d82564a705f9c5480e2c88.js">
+  </script>
   <script>urlBaseOverride = "../../ODSAkhan-exercises/";</script>
   <script src="../../ODSAkhan-exercises/khan-exercise.js"></script>
-  <script src="../../JSAV/build/JSAV-min.js"></script>
-  <link rel="stylesheet" href="../../JSAV/css/JSAV.css" type="text/css" />
 </head>
 <body>
 
 <div class="exercise">
-    <div class = "vars">
-      <var id="TYPES">[ "True", "False" ]</var>
-      <var id="GBAns">randFromArray( TYPES )</var>
-      <var id="GB">(GBAns === "True") ? "good" : "bad"</var>
-    </div>
   <div class="problems">
-     
-    <!-- Question MCQ -->
     <div id="problem-type-or-description">
       <p class="question"> What is the running time of Insertion Sort
 	when the input is an array that has already been sorted? </p>
@@ -33,7 +24,9 @@
 	<li><var><code>\Theta(n \log n)</code></var></li>	 	 
       </ul>
 	   <div class="hints">
-	   <p>Remember that during each iteration, the first remaining element of the input is only compared with the right-most element of the sorted portion of the array.</p>
+	   <p>Each test in the inner for loop will fail because the
+	   value at position <code>i</code> is never less than the
+	   value at position <code>i-1</code>.</p>
 	   </div>
     </div> 
 
