Issue #99. Added JSAV header in rst files to include ODSA.js in the HTML files. Changed the template to remove about button from search page.

--- a/RST/source/_themes/haiku/layout.html
+++ b/RST/source/_themes/haiku/layout.html
@@ -83,7 +83,7 @@
            <p> <a style="float:left;color:blue;" href="{{ pathto('_sources/' + sourcename, true)|e }}"
                rel="nofollow">{{ _('Show Source') }} | </a>&#160;&#160;
         {%- endif %}
-        {%- if pagename=="ToDo" -%}
+        {%- if pagename=="ToDo" or pagename =="search" -%}
         &#160;&#160;
        {{ nav() }}</p>
         {%- else %}   
