Issue #101. Added a contact tab slide on all the page for contact and feedback information. We are using jquery tabslideout plugin.

--- a/RST/source/_themes/haiku/layout.html
+++ b/RST/source/_themes/haiku/layout.html
@@ -55,7 +55,31 @@
         <a  href="knowledgemap.html">|  Knowledge Map</a>
 {% endmacro %}
 
+
+{% macro contact() %}  
+
+      <div class="slide-out-div">
+      <a class="handle" href="#">Content</a>
+      <p>You can contact us at:
+      </p>
+      <a href="mailto:opendsa@cs.vt.edu">opendsa@cs.vt.edu</a>
+      <p>Or use the form below to submit feedback</p>
+      <form>
+                        <p><label>Name: </label><input type="text" /></p>
+                        <p><label>Email: </label><input type="text" /></p>
+                        <p><label>Subject: </label><input type="text" /></p>
+                        <p><label>Message: </label><textarea style="resize:none" rows="4" cols="35"></textarea></p>
+                        <p><input type="button" value="Send&raquo;" class="btn"/></p>
+      </form>
+
+      </div>
+
+
+{% endmacro %}   
+
 {% block content %}
+
+      {{ contact() }} 
       <div class="header">
         {%- block haikuheader %}
         {{ login() }}  
