More robust functions to store and send event data, prototype functions for storing and sending user's score data, prompt user to login whenever they do not have an existing valid session

--- a/AV/Development/mergesort-proficiency.html
+++ b/AV/Development/mergesort-proficiency.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<title>Mergesort Proficiency Exercise</title>
-	<!--<link href="AeBookAV.css" rel="stylesheet" type="text/css" />-->
+	<link href="opendsaAV.css" title="CSS" rel="stylesheet" type="text/css" />
 	<link rel="stylesheet" href="../../JSAV/css/JSAV.css" type="text/css" />
 	<style>
 
@@ -99,7 +99,7 @@
 	</div> <!-- container -->
   
 	
-
+	<script src="../../RST/source/_static/ODSA.js"></script>
 	<script>
 	$('input[name="help"]').click(help);
 	$('input[name="about"]').click(about);
